# markview

./: Cargo.toml  README.md  test.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: app.rs  event.rs  main.rs  search.rs  theme.rs
src/markdown/: highlight.rs  mod.rs  parser.rs  types.rs
src/ui/: error_popup.rs  file_picker.rs  mod.rs  search_bar.rs  status_bar.rs  viewer.rs
